# Android-CPP

./: .gitignore  AndroidManifest.xml.in  CMakeLists.txt  README.md  __build_n_install.cmd  _run.cmd  _run_crush.cmd  _stop.cmd  _uninstall.cmd  android_native_test_app.cpp  san_activity.hpp
